--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sustainable Living by Jordan</title>
-    <link rel="stylesheet" href="css/sustain.css">
+    <link rel="stylesheet" href="sustain.css">
   </head>
 
   <body>
@@ -71,3 +71,4 @@
     </div><!-- end content-wrapper -->
   </body>
 </html>
+
